2009-03-17  Stefan Kost  <ensonic@users.sf.net>

	patch by: Tobias Mueller <gnome-bugs@auftrags-killer.org>

	* COPYING-DOCS:
	* gtkdoc-check.in:
	* gtkdoc-common.pl.in:
	* gtkdoc-fixxref.in:
	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	* gtkdoc-rebase.in:
	* gtkdoc-scan.in:
	* gtkdoc-scangobj.in:
	* gtkdoc-scanobj.in:
	* help/manual/C/fdl-appendix.xml:
	* tools/gtk-doc.el:
	  Update FSF address. Fixes #575623.

2009-03-17  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkpdf.in:
	  Don't run fop for now, its way to broken.

	* tests/bugs/src/tester.h:
	  Formatting.

2009-03-17  Stefan Kost  <ensonic@users.sf.net>

	patch by: Vincent Untz <vuntz@nome.org>

	* gtkdoc-common.pl.in:
	  Be more friendly for files with a space in their name. Fixes #575574.
	  
2009-03-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Do not overwrite declaration variable with sgml-ified variant to not confuse
	  further parsing.

2009-03-10  Stefan Kost  <ensonic@users.sf.net>

	patch by: Nicola Fontana <ntd@entidi.it>

	* gtkdoc-scan.in:
	* tests/bugs/docs/Makefile.am:
	* tests/bugs/src/tester.h:
	  Improve the test and fix handling trailing decorators. Fixes #574654

2009-03-10  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/Makefile.am:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c:
	* tests/bugs/src/tester.h:
	  Adding a test for #574654.

2009-03-10  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	  Don't expect $MODULE to be defined (e.g. if someone does not update
	  gtkdoc.make).

2009-03-09  Stefan Kost  <ensonic@users.sf.net>

	* ChangeLog:
	  Fix ChangeLog format so that we pick up the bug number for release
	  notes.

2009-03-09  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* configure.in:
	* gtkdoc-fixxref.in:
	  Add vim support for syntax highlighting. Lets close the ticket.
	  Fixes #536928.

2009-03-09  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scangobj.in: