@@ -1,5 +1,10 @@
 2009-03-17  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtk-doc.m4:
+	  Turn pdf off if there is no gtkdoc-mkpdf installed.
+
+2009-03-17  Stefan Kost  <ensonic@users.sf.net>
+
 	patch by: Tobias Mueller <gnome-bugs@auftrags-killer.org>
 
 	* COPYING-DOCS:
